ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rony-hms-ingress
  namespace: rony-hms
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /user
            pathType: Prefix
            backend:
              service:
                name: userinfo-service
                port:
                  number: 9093

          # - path: /
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: eureka-service
          #       port:
          #         number: 8761
